Fix contrast errors

--- a/project/styles/medium.css
+++ b/project/styles/medium.css
@@ -35,12 +35,18 @@
     border-radius: 5px;
   }
 
-  .navigation a:hover {
+  .navigation a:hover,
+  #active:hover {
     background: var(--secondary-color);
     color: black;
   }
 
   /* ID Selectors */
+  #active {
+    color: white;
+    text-decoration: underline;
+  }
+
   #title {
     margin: 0;
   }
